--- a/src/app/lib/layout/user-layout/layout.component.css
+++ b/src/app/lib/layout/user-layout/layout.component.css
@@ -5,18 +5,24 @@
 }
 
 nav {
-    background-color: lightgray;
-
-}
-
-.container {
+    background-color:#fffdce;
     display: flex;
     flex-direction: row;
     justify-items: flex-end;
     justify-content: space-between;
 }
 
+div{
+    min-width: 25%;
+}
+
 h2 {
     font-family: cursive;
+    font-size: x-large;
+    margin-left: 2%;
+}
+
+nav > * , button {
+    margin: 1%;
 }
 
