--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -20,7 +20,7 @@
     <button type="submit" mat-raised-button color="Primary" [disabled]="form.invalid">Login</button>
 
     <h4>If you aren't an admin you can't login.</h4>
-    <p>To register as new admin please <button mat-raised-button [routerLink]="['/auth/register']">CLICK HERE</button>
+    <p>To register as new admin please <button mat-raised-button [routerLink]="['/register']">CLICK HERE</button>
     </p>
 
 </form>
