--- a/src/app/lib/layout/admin-layout/admin-layout.component.html
+++ b/src/app/lib/layout/admin-layout/admin-layout.component.html
@@ -1,7 +1,17 @@
 <mat-drawer-container class="example-container">
-    <mat-drawer mode="side" opened>Drawer content</mat-drawer>
-    <mat-drawer-content> 
-     <router-outlet></router-outlet>
-  </mat-drawer-content>
-  </mat-drawer-container>
 
+    <mat-drawer mode="side" opened>
+        <div class="side">
+        <h4> <b>Welcome dear</b> </h4>
+
+            <button mat-raised-button [routerLink]="['addStartup']">Add new startup</button>
+            <button mat-raised-button (click)="addSector()">Add new sector</button>
+            <button mat-raised-button [routerLink]="(['/allStartups'])">Back to home page</button>
+            <button mat-raised-button [routerLink]="(['/Register'])">Dashboard</button>
+
+        </div>
+    </mat-drawer>
+    <mat-drawer-content>
+        <router-outlet></router-outlet>
+    </mat-drawer-content>
+</mat-drawer-container>
