--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,3 +1,5 @@
+<app-layout></app-layout>
+
 <div class="container">
 <mat-card>
     <mat-card-header>
@@ -27,6 +29,6 @@
 </mat-card>
 </div>
 
-<button mat-raised-button color="warn" [routerLink]="['/home']">Back to home page</button>
+<button mat-raised-button color="warn" [routerLink]="['/allStartups']">Back to home page</button>
 
 
