--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -1,4 +1,5 @@
 
+
 <div class="container">
     <h1>Register</h1>
 <form [formGroup]="form" (ngSubmit)="submit()">
@@ -33,6 +34,14 @@
         <mat-label>Confirm Password</mat-label>
         <input placeholder="ConfirmPassword" matInput type="password" formControlName="confirmPassword">
         <mat-error *ngIf="confirmPassword?.hasError('required')">Password is required</mat-error>
+    </mat-form-field>
+
+    
+    <mat-form-field>
+        <mat-label>Admin Key</mat-label>
+        <input placeholder="adminKey" matInput type="password" formControlName="adminKey" >
+
+        <!-- <mat-error *ngIf="confirmPassword?.hasError('required')">Please enter a valid admin key to pass the registration correctly</mat-error> -->
     </mat-form-field>
 
     <small *ngIf="form?.hasError('passwordDosentMatch')">Confirm password dosn't match entered password</small>
