--- a/src/app/pages/contact-us/contact-us.component.css
+++ b/src/app/pages/contact-us/contact-us.component.css
@@ -1,34 +1,25 @@
 .mainContainer {
-    margin: 5%;
     display: flex;
-    flex-direction: row;
-    width: 90%;
-    min-height: 70%;
-    border-radius: 50%;
+    flex-direction: column;
+    width: 50%;
+    margin: 0 auto;
 
 }
 
 .container1 {
-    background-color: lightblue;
+   /* border: 1px solid black; */
     margin: 0 auto;
-    width: max-content;
-    border-radius: 10%;
-    padding: 2%;
+    width: 25%;
 }
 
-
 .container2 {
-    width: 35%;
+    padding: 5%;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
 }
 
-span {
-    margin: 0 2%;
-
-}
-
 .container2>form>* {
     width: 100%;
 }
+
