--- a/src/app/lib/layout/admin-layout/admin-layout.component.html
+++ b/src/app/lib/layout/admin-layout/admin-layout.component.html
@@ -7,7 +7,7 @@
             <button mat-raised-button [routerLink]="['addStartup']">Add new startup</button>
             <button mat-raised-button (click)="addSector()">Add new sector</button>
             <button mat-raised-button [routerLink]="(['/allStartups'])">Back to home page</button>
-            <button mat-raised-button [routerLink]="(['/Register'])">Dashboard</button>
+            <button mat-raised-button [routerLink]="(['/admin'])">Dashboard</button>
 
         </div>
     </mat-drawer>
