--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="filter">
 <mat-form-field>
   <mat-label >Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+  <input matInput (keyup)="applyFilter($event)" placeholder="FILTER" #input>
 </mat-form-field>
 </div>
 
@@ -46,7 +46,8 @@
 
   <ng-container matColumnDef="edit">
     <th mat-header-cell *matHeaderCellDef> EDIT </th>
-    <td mat-cell *matCellDef="let element"> <mat-icon>edit</mat-icon></td>
+    <td mat-cell *matCellDef="let element"> 
+      <mat-icon [routerLink]="['editStartup',element.id]">edit</mat-icon></td>
   </ng-container>
 
   <ng-container matColumnDef="delete">
