--- a/src/app/lib/layout/user-layout/layout.component.html
+++ b/src/app/lib/layout/user-layout/layout.component.html
@@ -3,9 +3,9 @@
     <h2>Jordan Startups</h2>
 
     <div>
-        <button mat-raised-button [routerLink]="['/about-us']">About us</button>
-        <button mat-raised-button [routerLink]="['/contact-us']">Contact us</button>
-        <button mat-raised-button [routerLink]="['/auth/login']">Members area</button>
+        <button mat-button [routerLink]="['/about-us']">About us</button>
+        <button mat-button [routerLink]="['/contact-us']">Contact us</button>
+        <button mat-button [routerLink]="['/auth/login']">Members area</button>
     </div>
 
 </nav>
