--- a/src/app/pages/about-us/about-us.component.css
+++ b/src/app/pages/about-us/about-us.component.css
@@ -15,8 +15,9 @@ mat-card-subtitle{
 mat-card{
    
     text-align: center;
-        background-image: radial-gradient(circle, #FFF6BF, white) ;
+        background-image: radial-gradient(circle,#c4dbf5, white) ;
         padding: 3%;
+        border-radius: 40%;
 }
 
 button{
