--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -29,6 +29,6 @@
 </mat-card>
 </div>
 
-<button mat-raised-button color="warn" [routerLink]="['/allStartups']">Back to home page</button>
+<button mat-raised-button color="primary" [routerLink]="['/allStartups']">Back to home page</button>
 
 
