--- a/src/app/pages/admin/add-sector/add-sector.component.html
+++ b/src/app/pages/admin/add-sector/add-sector.component.html
@@ -1,6 +1,6 @@
 
 <div class="container">
-  <h1>Add Sector</h1>
+  <h1>Add new sector</h1>
     <form [formGroup]="form" >
   <div mat-dialog-content >
     
@@ -11,7 +11,9 @@
   
   </div>
   </form>
+  <div class="buttons">
   <button mat-stroked-button (click)="submit()">add</button>
   <button mat-stroked-button (click)="closeTheDialogue()">close</button>
   </div>
+</div>
   
