--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -52,7 +52,7 @@
 
         <pre><h2><b>GitHub:  </b><a href="https://github.com/ayat-saliti">GitHub/ayat-saliti</a></h2></pre>
 
-        <button mat-raised-button color="warn" [routerLink]="['/allStartups']">Back to home page</button>
+        <button mat-raised-button color="primary" [routerLink]="['/allStartups']">Back to home page</button>
 
     </div>
 </div>
