--- a/src/app/lib/layout/admin-layout/admin-layout.component.html
+++ b/src/app/lib/layout/admin-layout/admin-layout.component.html
@@ -1,17 +1,64 @@
-<mat-drawer-container class="example-container">
 
-    <mat-drawer mode="side" opened>
-        <div class="side">
-        <h4> <b>Welcome dear</b> </h4>
 
-            <button mat-raised-button [routerLink]="['addStartup']">Add new startup</button>
-            <button mat-raised-button (click)="addSector()">Add new sector</button>
-            <button mat-raised-button [routerLink]="(['/allStartups'])">Back to home page</button>
-            <button mat-raised-button [routerLink]="(['/admin'])">Dashboard</button>
+<div class="navbar-container" [class.example-is-mobile]="mobileQuery.matches">
 
-        </div>
-    </mat-drawer>
-    <mat-drawer-content>
-        <router-outlet></router-outlet>
-    </mat-drawer-content>
-</mat-drawer-container>
+    <!-- Top navbar -->
+    <mat-toolbar class="navbar" color="primary">
+  
+      <button mat-icon-button (click)="snav.toggle()">
+        <mat-icon>menu</mat-icon>
+      </button>
+  
+    </mat-toolbar>
+  
+    <mat-sidenav-container class="navbar-sidenav-container">
+      <!-- Side nav -->
+      <mat-sidenav #snav [opened]="!mobileQuery.matches" [mode]="mobileQuery.matches ? 'over' : 'side'"
+        [fixedInViewport]="mobileQuery.matches" fixedTopGap="56" class="sidenav">
+  
+        <mat-nav-list>
+          <h3 mat-subheader>Welcome</h3>
+  
+          <a mat-list-item class="mat-list-item-container" [routerLink]="['addStartup']" routerLinkActive="active" >
+            <div class="menu-element">
+                  <p mat-line> Add new startup </p>
+            </div>
+          </a>
+
+          <a mat-list-item class="mat-list-item-container" (click)="addSector()" routerLinkActive="active" >
+            <div class="menu-element">
+                  <p mat-line> Add new sector </p>
+            </div>
+          </a>
+
+          <a mat-list-item class="mat-list-item-container" [routerLink]="(['/allStartups'])" routerLinkActive="active" >
+            <div class="menu-element">
+                  <p mat-line> Home page </p>
+            </div>
+          </a>
+
+
+<!--   
+          <a mat-list-item [routerLink]="['/home']">
+            <div class="menu-element">
+            <mat-icon mat-list-icon>exit_to_app</mat-icon>
+            <p mat-line> Log out </p>
+            </div>
+          </a> -->
+  
+  
+        </mat-nav-list>
+  
+      </mat-sidenav>
+  
+      <!-- Main content -->
+      <mat-sidenav-content class="sidenav-content">
+  
+        <router-outlet>
+
+        </router-outlet>
+  
+      </mat-sidenav-content>
+    </mat-sidenav-container>
+  
+  </div>
