--- a/src/app/lib/layout/user-layout/layout.component.css
+++ b/src/app/lib/layout/user-layout/layout.component.css
@@ -4,14 +4,14 @@
 }
 
 nav {
-    /* background-color:#fffdce; */
-    background-image: linear-gradient(#fffdce, white);
+
+    /* background-image: linear-gradient(#fffdce, white); */
+    background-image: linear-gradient(#1d6cc6 , #c4dbf5, white);
     display: flex;
     flex-direction: row;
     justify-items: flex-end;
     justify-content: space-between;
-    /* border: 1px solid black; */
-    height: 20vh;
+    height: 10vh;
 }
 
 div{
