--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -1,17 +1,21 @@
+
+
 <div class="filter">
 <mat-form-field>
   <mat-label >Filter</mat-label>
   <input matInput (keyup)="applyFilter($event)" placeholder="FILTER" #input>
 </mat-form-field>
+
+
 </div>
 
 
-
+<div id="pdfTable" #pdftable="">
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
   <ng-container matColumnDef="logo">
     <th mat-header-cell *matHeaderCellDef> Logo </th>
-    <td mat-cell *matCellDef="let element"><img [src]="element?.logo" alt="logo" /> </td>
+    <td mat-cell *matCellDef="let element" ><img [src]="element?.logo" alt="logo" /> </td>
   </ng-container>
 
   <ng-container matColumnDef="Company Name">
@@ -23,6 +27,7 @@
     <th mat-header-cell *matHeaderCellDef> Sector </th>
     <td mat-cell *matCellDef="let element"> {{element.sector}} </td>
   </ng-container>
+
 
   <ng-container matColumnDef="Year Of Establishment">
     <th mat-header-cell *matHeaderCellDef> Year Of Establishment </th>
@@ -36,12 +41,18 @@
 
   <ng-container matColumnDef="phone number">
     <th mat-header-cell *matHeaderCellDef> Phone number </th>
-    <td mat-cell *matCellDef="let element"> {{element.phoneNo}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
   </ng-container>
 
   <ng-container matColumnDef="email">
     <th mat-header-cell *matHeaderCellDef> Email </th>
     <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+  </ng-container>
+
+    
+  <ng-container matColumnDef="about" >
+    <th mat-header-cell *matHeaderCellDef> About </th>
+    <td mat-cell *matCellDef="let element" class="about"> {{element.about}} </td>
   </ng-container>
 
   <ng-container matColumnDef="edit">
@@ -64,3 +75,5 @@
     <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
   </tr>
 </table>
+
+</div>
