--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -19,7 +19,7 @@
 
     <button type="submit" mat-raised-button color="Primary" [disabled]="form.invalid">Login</button>
 
-    <h4>If you aren't an admin you can't login.</h4>
+    <h4>Only admin has the permission to login.</h4>
     <p>To register as new admin please <button mat-raised-button [routerLink]="['/register']">CLICK HERE</button>
     </p>
 
