--- a/src/app/pages/all-startups/all-startups.component.css
+++ b/src/app/pages/all-startups/all-startups.component.css
@@ -7,18 +7,17 @@
     grid-auto-rows: 37vh;
     margin: 0 auto;
 }
-/* //#FFF6BF */
+
 mat-card{
     margin: 3%;
     border-radius: 30% 70%;
-    /* background-color: white; */
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;  
     cursor: pointer;
     margin-top: 10vh;
-    background-image: linear-gradient(to top right,#c4dbf5, white, white);
+    background-image: linear-gradient(to top right,#babcbdc9, white, white);
 }
 /* ##c4dbf5 */
 
