--- a/src/app/lib/layout/user-layout/layout.component.css
+++ b/src/app/lib/layout/user-layout/layout.component.css
@@ -6,7 +6,7 @@
 nav {
 
     /* background-image: linear-gradient(#fffdce, white); */
-    background-image: linear-gradient(#1d6cc6 , #c4dbf5, white);
+    background-image: linear-gradient(#1d6cc6 , #c4dbf5, #d7e5f5, white);
     display: flex;
     flex-direction: row;
     justify-items: flex-end;
@@ -18,10 +18,9 @@ div{
     min-width: 30%;
 }
 
-h2 {
-    font-family: cursive;
-    font-size: x-large;
-    margin-left: 2%;
+img{
+    width: 10%;
+    height: 80%;
 }
 
 nav > * , button {
