--- a/src/app/pages/admin/edit-startup/edit-startup.component.css
+++ b/src/app/pages/admin/edit-startup/edit-startup.component.css
@@ -3,7 +3,8 @@
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-
+    max-height: 90vh;
+    margin-bottom: 10%;
 }
 
 mat-form-field{
@@ -13,3 +14,12 @@ mat-form-field{
     display: none;
 }
 
+.subCont{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+ img{
+    max-width: 20%;
+ }
