--- a/src/app/pages/all-startups/all-startups.component.css
+++ b/src/app/pages/all-startups/all-startups.component.css
@@ -1,31 +1,35 @@
 .mainContainer{
     width: 80%;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    column-gap: 7%;
-    flex-direction: row;
+    grid-template-columns: repeat(4,1fr);
+    column-gap: 5%;
     grid-auto-rows: 37vh;
     margin: 0 auto;
 }
 
+
+
 mat-card{
+    border: 1px solid rgb(1, 1, 60);
     margin: 3%;
     border-radius: 30% 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;  
+    align-items: center; 
     cursor: pointer;
     margin-top: 10vh;
     background-image: linear-gradient(to top right,#babcbdc9, white, white);
+    padding: 0 10%;
+
 }
 /* ##c4dbf5 */
 
 
 img{
-    width: 30%;
+    width: 90%;
 }
 
-h2{
+/* h2{
     text-align: center;
-}
+} */
