--- a/src/app/pages/auth/login/login.component.html
+++ b/src/app/pages/auth/login/login.component.html
@@ -17,11 +17,13 @@
         <mat-error *ngIf="password?.hasError('minlength')">Password must be at least 8 characters</mat-error>
     </mat-form-field>
 
+
     <button type="submit" mat-raised-button color="Primary" [disabled]="form.invalid">Login</button>
+</form>
 
     <h4>Only admin has the permission to login.</h4>
-    <p>To register as new admin please <button mat-raised-button [routerLink]="['/register']">CLICK HERE</button>
+    <p>To register as new admin please <button mat-raised-button [routerLink]="['/auth/register']">CLICK HERE</button>
     </p>
 
-</form>
+
 </div>
