--- a/src/app/pages/startups-details/startups-details.component.css
+++ b/src/app/pages/startups-details/startups-details.component.css
@@ -1,32 +1,38 @@
 .mainContainer{
-    display: flex;
-    flex-direction: column;
+    /* display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
+    display: grid;
+    grid-template-columns: 2fr 1fr;
     margin: 5%;
-    
+    gap: 10%;
 }
 
-mat-card{
-   width: 80%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
-}
+
 
 img{
     max-width: 25vw;
 }
 
-.container2, .container1{
+.container2{
    display: flex;
    flex-direction: column;
    align-items: center;
+   justify-content: center;
+}
 
+.about{
+    text-align: justify;
+}
+
+.container1{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 button{
-    margin: 2%;
+left: 50%;
+padding: 0 2%;
 }
