--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -1,34 +1,19 @@
 <app-layout></app-layout>
 
 <div class="container">
-<mat-card>
-    <mat-card-header>
-      <mat-card-title><u>WHAT IS "JORDAN STARTUPS"</u></mat-card-title>
-      <mat-card-subtitle>
-        "JORDAN STARTUPS" help startups in jordan who are young companies founded to develop a unique product or service,
-        bring it to market and make it irresistible and irreplaceable for customers.</mat-card-subtitle>
-    </mat-card-header>
-</mat-card>
 
-<mat-card>
-    <mat-card-header>
-      <mat-card-title><u>OUR MISSION</u></mat-card-title>
-      <mat-card-subtitle>
-         More startups are needed in the world. Our goal is to facilitate both of these. Allow us to do.
-    </mat-card-subtitle>
-    </mat-card-header>
-</mat-card>
+  <div class="paragraph">
+   <h1> <u>WHAT IS "JORDAN STARTUPS"</u></h1>
+    <p> "JORDAN STARTUPS" help startups in jordan who are young companies founded to develop a unique product or service,
+      bring it to market and make it irresistible and irreplaceable for customers.</p>
+   <br><br><br>
+      <h1>  <u>OUR MISSION</u></h1>
+      <p>         More startups are needed in the world. Our goal is to facilitate both of these. Allow us to do.
+      </p>
 
-<mat-card>
-    <mat-card-header>
-      <mat-card-title><u>OUR MISSION</u></mat-card-title>
-      <mat-card-subtitle>
-         More startups are needed in the world. Our goal is to facilitate both of these. Allow us to do.
-    </mat-card-subtitle>
-    </mat-card-header>
-</mat-card>
-</div>
+  </div>
 
 <button mat-raised-button color="primary" [routerLink]="['/allStartups']">Back to home page</button>
 
+</div>
 
