--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -2,13 +2,25 @@
 
 <div class="mainContainer">
 
+
+    <div class="container1">
+        <pre><h2><b>E-mail:  </b><a href="mailto:ayat_slaity@yahoo.com">E-mail/ayat_Slaity</a></h2></pre>
+        <pre><h2><b>GitHub:  </b><a href="https://github.com/ayat-saliti">GitHub/ayat-saliti</a></h2></pre>
+        <pre><h2><b>LinkedIn:  </b><a href="https://linkedin.com/in/ayat-slaity">LinkedIn/ayat-Slaity</a></h2></pre>
+        <pre><h2><b>Phone number:   </b><a href="tel:+962797329470">+962797329470</a></h2></pre>
+        <br><br>
+        <button mat-raised-button color="primary" [routerLink]="['/allStartups']">Back to home page</button>
+
+    </div>
+
+
     <div class="container2">
         <h1>If you have any note please contact us here</h1>
         <form [formGroup]="form">
     
             <mat-form-field>
                 <mat-label>Name</mat-label>
-                <input placeholder="name" matInput type="text" formControlName="name">
+                <input placeholder="name" matInput type="text" formControlName="name" required="Please enter you name">
             </mat-form-field>
         
             <mat-form-field>
@@ -43,16 +55,5 @@
     </div>
   
 
-    <div class="container1">
-        <pre><h2><b>Phone number:   </b><a href="tel:+962797329470">+962797329470</a></h2></pre>
-
-        <pre><h2><b>E-mail:  </b><a href="mailto:ayat_slaity@yahoo.com">E-mail/ayat-saliti</a></h2></pre>
-
-        <pre><h2><b>LinkedIn:  </b><a href="https://linkedin.com/in/ayat-slaity">LinkedIn/ayat-saliti</a></h2></pre>
-
-        <pre><h2><b>GitHub:  </b><a href="https://github.com/ayat-saliti">GitHub/ayat-saliti</a></h2></pre>
-
-        <button mat-raised-button color="primary" [routerLink]="['/allStartups']">Back to home page</button>
-
-    </div>
+   
 </div>
