--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,8 @@
     <div class="subContainer">
         <h1>JORDAN STARTUPS</h1>
     <h2>All you need to know about startups in Jordan, you will find it on one site...</h2>
-    <button mat-button [routerLink]="['/allStartups']" color="warn">LETS START</button>
+    <br>
+    <button mat-flat-button [routerLink]="['/allStartups']" color="primary" >LETS START</button>
 </div>
 </div>
 
