--- a/src/app/pages/startups-details/startups-details.component.html
+++ b/src/app/pages/startups-details/startups-details.component.html
@@ -46,4 +46,4 @@
         </mat-card>
  
 </div>
-<button mat-raised-button color="warn" [routerLink]="['/allStartups']">BACK</button>
+<button mat-raised-button color="primary" [routerLink]="['/allStartups']" >BACK</button>
