--- a/src/app/pages/auth/register/register.component.html
+++ b/src/app/pages/auth/register/register.component.html
@@ -40,11 +40,12 @@
     <mat-form-field>
         <mat-label>Admin Key</mat-label>
         <input placeholder="adminKey" matInput type="password" formControlName="adminKey" >
-
-        <!-- <mat-error *ngIf="confirmPassword?.hasError('required')">Please enter a valid admin key to pass the registration correctly</mat-error> -->
+        <!-- <mat-error *ngIf="adminKey?.hasError('adminKeyValidator')">Admin Key is required ... This permission only for admin</mat-error> -->
+        <mat-error *ngIf="adminKey?.hasError('required')">AdminKey is required</mat-error>
     </mat-form-field>
 
     <small *ngIf="form?.hasError('passwordDosentMatch')">Confirm password dosn't match entered password</small>
+    <small *ngIf="form?.hasError('adminKeyDoesntMatch')">Please enter a valid admin key to pass the registration correctly</small>
 
     <button type="submit" mat-raised-button color="Primary" [disabled]="form.invalid">Register</button>
 
