--- a/src/app/pages/contact-us/contact-us.component.css
+++ b/src/app/pages/contact-us/contact-us.component.css
@@ -1,7 +1,8 @@
+
 .mainContainer {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    /* width: 50%; */
     margin: 0 auto;
 
 }
@@ -10,16 +11,22 @@
    /* border: 1px solid black; */
     margin: 0 auto;
     width: 25%;
+    margin-top: 30%;
+    padding-left: 20%;
+    
 }
 
 .container2 {
-    padding: 5%;
+    padding: 7% 15%;
     display: flex;
     flex-direction: column;
     margin: 0 auto;
 }
 
-.container2>form>* {
+.container2>form>*, .container1 {
     width: 100%;
 }
 
+.container1>button{
+    left: 14%;
+}
