--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,9 +1,9 @@
 .container1 {
 
-    background: url(/assets/26507.jpg) no-repeat;
+    background: url(/assets/background.jpg) no-repeat;
     height: 100vh;
-    background-size: cover;
-    background-position: center center;
+    background-size:cover;
+    background-position: center;
     position: relative;
 }
 
@@ -12,20 +12,20 @@
     position: absolute;
     top: 30vh;
     right: 30vw;
-    color: rgb(75, 38, 2);
+    color: rgb(14, 14, 94);
 }
 h1{
      font-family: cursive;
     font-size:xx-large;
-    color: rgb(75, 38, 2);
+    color: rgb(16, 16, 74);
 }
 h2 {
     font-family: cursive;
     font-size: x-large;
-    color: rgb(75, 38, 2);
+    color:  rgb(14, 14, 94);
     padding: 3% 0;
 }
 button{
     font-family: cursive;
-    
+    left: 70%;
 }
