--- a/src/app/pages/admin/dashboard/dashboard.component.html
+++ b/src/app/pages/admin/dashboard/dashboard.component.html
@@ -1,79 +1,79 @@
-
-
 <div class="filter">
-<mat-form-field>
-  <mat-label >Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" placeholder="FILTER" #input>
-</mat-form-field>
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="FILTER" #input>
+  </mat-form-field>
 
 
 </div>
 
 
 <div id="pdfTable" #pdftable="">
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-  <ng-container matColumnDef="logo">
-    <th mat-header-cell *matHeaderCellDef> Logo </th>
-    <td mat-cell *matCellDef="let element" ><img [src]="element?.logo" alt="logo" /> </td>
-  </ng-container>
+    <ng-container matColumnDef="logo">
+      <th mat-header-cell *matHeaderCellDef> Logo </th>
+      <td mat-cell *matCellDef="let element"><img [src]="element?.logo" alt="logo" /> </td>
+    </ng-container>
 
-  <ng-container matColumnDef="Company Name">
-    <th mat-header-cell *matHeaderCellDef> Company Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.companyName}} </td>
-  </ng-container>
+    <ng-container matColumnDef="Company Name">
+      <th mat-header-cell *matHeaderCellDef> Company Name </th>
+      <td mat-cell *matCellDef="let element"> {{element.companyName}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="sector">
-    <th mat-header-cell *matHeaderCellDef> Sector </th>
-    <td mat-cell *matCellDef="let element"> {{element.sector}} </td>
-  </ng-container>
+    <ng-container matColumnDef="sector">
+      <th mat-header-cell *matHeaderCellDef> Sector </th>
+      <td mat-cell *matCellDef="let element"> {{element.sector}} </td>
+    </ng-container>
 
 
-  <ng-container matColumnDef="Year Of Establishment">
-    <th mat-header-cell *matHeaderCellDef> Year Of Establishment </th>
-    <td mat-cell *matCellDef="let element"> {{element.yearOfEstablishment}} </td>
-  </ng-container>
+    <ng-container matColumnDef="Year Of Establishment">
+      <th mat-header-cell *matHeaderCellDef> Year Of Establishment </th>
+      <td mat-cell *matCellDef="let element"> {{element.yearOfEstablishment}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="Website">
-    <th mat-header-cell *matHeaderCellDef> Website </th>
-    <td mat-cell *matCellDef="let element"> {{element. website}} </td>
-  </ng-container>
+    <ng-container matColumnDef="Website">
+      <th mat-header-cell *matHeaderCellDef> Website </th>
+      <td mat-cell *matCellDef="let element"> {{element. website}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="phone number">
-    <th mat-header-cell *matHeaderCellDef> Phone number </th>
-    <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
-  </ng-container>
+    <ng-container matColumnDef="phone number">
+      <th mat-header-cell *matHeaderCellDef> Phone number </th>
+      <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="email">
-    <th mat-header-cell *matHeaderCellDef> Email </th>
-    <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-  </ng-container>
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef> Email </th>
+      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+    </ng-container>
 
-    
-  <ng-container matColumnDef="about" >
-    <th mat-header-cell *matHeaderCellDef> About </th>
-    <td mat-cell *matCellDef="let element" class="about"> {{element.about}} </td>
-  </ng-container>
 
-  <ng-container matColumnDef="edit">
-    <th mat-header-cell *matHeaderCellDef> EDIT </th>
-    <td mat-cell *matCellDef="let element"> 
-      <mat-icon [routerLink]="['editStartup',element.id]">edit</mat-icon></td>
-  </ng-container>
+    <ng-container matColumnDef="about">
+      <th mat-header-cell *matHeaderCellDef> About </th>
+      <td mat-cell *matCellDef="let element" class="about"> {{element.about}} </td>
+    </ng-container>
 
-  <ng-container matColumnDef="delete">
-    <th mat-header-cell *matHeaderCellDef> DELETE </th>
-    <td mat-cell *matCellDef="let element">
-       <button mat-icon-button (click)= "deleteStartup(element.id)"><mat-icon>delete</mat-icon></button></td>
-  </ng-container>
+    <ng-container matColumnDef="edit">
+      <th mat-header-cell *matHeaderCellDef> EDIT </th>
+      <td mat-cell *matCellDef="let element">
+        <mat-icon [routerLink]="['editStartup',element.id]">edit</mat-icon>
+      </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef> DELETE </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button (click)="deleteStartup(element.id)"><mat-icon>delete</mat-icon></button>
+      </td>
+    </ng-container>
 
- 
-  <tr class="mat-row" *matNoDataRow>
-    <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-  </tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+    </tr>
+  </table>
 
 </div>
