--- a/src/app/lib/layout/user-layout/layout.component.html
+++ b/src/app/lib/layout/user-layout/layout.component.html
@@ -5,7 +5,7 @@
     <div>
         <button mat-button [routerLink]="['/about-us']">About us</button>
         <button mat-button [routerLink]="['/contact-us']">Contact us</button>
-        <button mat-button [routerLink]="['/auth/login']">Members area</button>
+        <button mat-button [routerLink]="['/auth/login']">Admin</button>
     </div>
 
 </nav>
